# pico-home-assistant

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  ds18b20.c  ds18b20.h  ds18b20_test.c  formatter_test.c  lwipopts.h  lwipopts_examples_common.h  mbedtls_config.h  mbedtls_config_examples_common.h  ping.c  run_tests.sh  scan.c  sensor.c  version_display.c  version_display.h
.github/: CODEOWNERS
docs/: VERSION_MANAGEMENT.md  VS_CODE_TESTING.md
src/config/: lwipopts_examples_common.h  mbedtls_config.h  mbedtls_config_examples_common.h
src/drivers/: ds18b20.h
src/main/: ds18b20_monitor.c  scan.c
src/utils/: version_display.c
tests/: CMakeLists.txt  README.md  ds18b20_test.c
tests/fixtures/: test_helpers.c  test_helpers.h
tests/integration/: test_full_system.c
tests/unit/: ds18b20_utils.c  ds18b20_utils.h  test_ds18b20.c  test_utils.c
tests/unit/mocks/: mock_gpio.c  mock_gpio.h  mock_pico.c  mock_pico.h
